--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
     <!-- Contact Details Below -->
     <div class="contact-details">
       <p><strong>Phone:</strong> +27 21 003 800 | +27 66 448 5550</p>
-      <p><strong>Email:</strong> <a href="mailto:admin@catalystaccountingbusinessconsultants.com">admin@catalystaccountingbusinessconsultants.com</a></p>
+<!--       <p><strong>Email:</strong> <a href="mailto:admin@catalystaccountingbusinessconsultants.com">admin@catalystaccountingbusinessconsultants.com</a></p> -->
       <p><strong>Address:</strong> Unit 118, 1st Floor, Block B North Park, Black River Park, 2 Fir Street, Observatory, Cape Town, Western Cape</p>
     </div>
   </div>
@@ -445,3 +445,4 @@
 
 
 </html>
+
