--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@
       <p><strong>Phone:</strong> +27 21 003 800 | +27 66 448 5550</p>
 <!--       <p><strong>Email:</strong> <a href="mailto:admin@catalystaccountingbusinessconsultants.com">admin@catalystaccountingbusinessconsultants.com</a></p> -->
       <p><strong>Address:</strong> Unit 118, 1st Floor, Block B North Park, Black River Park, 2 Fir Street, Observatory, Cape Town, Western Cape</p>
+      <p>Developed by <a href="mailto:mothibacs@gmail.com">Mothiba CS</a></p>
     </div>
   </div>
 </section>
@@ -445,4 +446,5 @@
 
 
 </html>
+
 
