--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
   <!-- FOOTER -->
   <footer>
     <p>&copy; 2025 Catalyst Accounting & Business Consultants (Pty) Ltd. All Rights Reserved.</p>
-    <p>Developed by <a href="mailto:mothibacs@gmail.com">Mothiba CS</a></p>
+    <p>Developed by <a href="mailto:nexadataconsulting@gmail.com">NexaData Consulting</a></p>
   </footer>
 </body>
 
@@ -446,6 +446,7 @@
 
 
 </html>
+
 
 
 
