removing management section

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </p>
 
     <!-- Management Team -->
-    <div class="team">
+   <!-- <div class="team">
       <h2>Our Management Team</h2>
       <div class="team-grid">
 
@@ -110,7 +110,6 @@
             <a href="#"><i class="fas fa-envelope"></i></a>
         </div>
         </div>
-        <!-- Modal: Managing Director-->
       <div id="modal1" class="modal">
         <div class="modal-content">
           <span class="close" onclick="closeModal('modal1')">&times;</span>
@@ -126,10 +125,7 @@
           <img src="src/blank-profile-picture-973460_1280.webp" alt="Manager 1">
           <h4>Vacant</h4>
           <p>Head of Accounting</p>
-          <!--<div class="social-icons">
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#"><i class="fas fa-envelope"></i></a>
-        </div>-->
+       
         </div>
 
         <div class="team-card" onclick="openModal('modal2')">
@@ -142,7 +138,6 @@
             <a href="mailto:jane.doe@example.com"><i class="fas fa-envelope"></i></a>
           </div>
         </div>
-        <!-- Modal: Head of Finance-->
       <div id="modal2" class="modal">
         <div class="modal-content">
           <span class="close" onclick="closeModal('modal2')">&times;</span>
@@ -164,7 +159,6 @@
             <a href="mailto:jane.doe@example.com"><i class="fas fa-envelope"></i></a>
         </div>
         </div>
-        <!-- Modal: Head of Finance-->
       <div id="modal3" class="modal">
         <div class="modal-content">
           <span class="close" onclick="closeModal('modal3')">&times;</span>
@@ -177,7 +171,7 @@
       </div>
 
       </div>
-    </div>
+    </div>-->
   </div>
 </section>
 
@@ -446,6 +440,7 @@
 
 
 </html>
+
 
 
 
